// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DetailsItem Snapshot type company 1`] = `
<View
  className="flex gap-0.5"
>
  <View
    className="max-w-72 min-w-32"
  >
    <Text
      className="px-1.5 text-f0-foreground-secondary"
    >
      Company
    </Text>
    <View
      className="flex flex-shrink justify-center gap-0.5"
    >
      <View
        className="flex rounded font-medium text-f0-foreground *:flex-1"
      >
        <View
          accessibilityLabel="Copy factorial"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="group flex flex-row justify-between gap-1.5 rounded p-1.5 transition-colors duration-300 active:bg-f0-background-secondary-hover"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            className="flex flex-row items-center gap-1.5"
          >
            <View
              className="inline-flex "
            >
              <View
                className="h-fit w-fit"
              >
                <View
                  aria-hidden={true}
                  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-5 h-5 rounded-xs bg-f0-background dark:bg-f0-background-inverse-secondary"
                  data-a11y-color-contrast-ignore={true}
                  role="img"
                >
                  <View
                    className="aspect-square h-full w-full"
                  >
                    <Image
                      aria-label="F"
                      source={
                        {
                          "uri": "https://avatars.githubusercontent.com/u/21041797?s=200&v=4",
                        }
                      }
                      style={
                        {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <Text
              className="line-clamp-5 text-left text-f0-foreground"
            >
              factorial
            </Text>
          </View>
          <View
            className="flex"
          >
            <RNSVGSvgView
              align="xMidYMid"
              aria-hidden={true}
              bbHeight="100%"
              bbWidth="100%"
              className="shrink-0 w-5 h-5 stroke-md text-f0-icon-bold col-start-1 col-end-2 row-start-1 row-end-2"
              fill="none"
              focusable={false}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M20 8.1a.9.9 0 0 1 .9.9v1.4c0 1.665 0 2.968-.085 4.014-.087 1.056-.265 1.929-.667 2.718a6.9 6.9 0 0 1-3.015 3.016c-.79.402-1.663.58-2.72.666-1.045.086-2.348.086-4.013.086H9a.9.9 0 0 1 0-1.8h1.4c1.695 0 2.912-.002 3.867-.08.945-.077 1.554-.225 2.048-.477a5.1 5.1 0 0 0 2.229-2.229c.25-.493.4-1.102.476-2.047.078-.955.08-2.172.08-3.867V9a.9.9 0 0 1 .9-.9m-6-4A3.9 3.9 0 0 1 17.9 8v6a3.9 3.9 0 0 1-3.9 3.9H8A3.9 3.9 0 0 1 4.1 14V8A3.9 3.9 0 0 1 8 4.1zM8 5.9A2.1 2.1 0 0 0 5.9 8v6c0 1.16.94 2.1 2.1 2.1h6a2.1 2.1 0 0 0 2.1-2.1V8A2.1 2.1 0 0 0 14 5.9z"
                  fill={
                    {
                      "type": 2,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DetailsItem Snapshot type dot-tag 1`] = `
<View
  className="flex gap-0.5"
>
  <View
    className="max-w-72 min-w-32"
  >
    <Text
      className="px-1.5 text-f0-foreground-secondary"
    >
      Dot Tag
    </Text>
    <View
      className="flex flex-shrink justify-center gap-0.5"
    >
      <View
        className="flex items-start pt-1"
      >
        <View
          className="flex items-start"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="overflow-hidden flex flex-row items-center justify-start gap-0.5 rounded-full py-0.5 pr-2 pl-1 border border-solid border-f0-border-secondary"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
                undefined,
              ]
            }
          >
            <View
              aria-hidden={true}
              className="m-1 aspect-square w-2 rounded-full"
              style={
                {
                  "backgroundColor": "#07A2AD",
                }
              }
            />
            <Text
              className="line-clamp-1 text-base font-medium text-f0-foreground"
            >
              Activity
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DetailsItem Snapshot type item 1`] = `
<View
  className="flex gap-0.5"
>
  <View
    className="max-w-72 min-w-32"
  >
    <Text
      className="px-1.5 text-f0-foreground-secondary"
    >
      Email
    </Text>
    <View
      className="flex flex-shrink justify-center gap-0.5"
    >
      <View
        className="flex rounded font-medium text-f0-foreground *:flex-1"
      >
        <View
          accessibilityLabel="Copy alicia.keys@factorial.co"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="group flex flex-row justify-between gap-1.5 rounded p-1.5 transition-colors duration-300 active:bg-f0-background-secondary-hover"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            className="flex flex-row items-center gap-1.5"
          >
            <Text
              className="line-clamp-5 text-left text-f0-foreground"
            >
              alicia.keys@factorial.co
            </Text>
          </View>
          <View
            className="flex"
          >
            <RNSVGSvgView
              align="xMidYMid"
              aria-hidden={true}
              bbHeight="100%"
              bbWidth="100%"
              className="shrink-0 w-5 h-5 stroke-md text-f0-icon-bold col-start-1 col-end-2 row-start-1 row-end-2"
              fill="none"
              focusable={false}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M20 8.1a.9.9 0 0 1 .9.9v1.4c0 1.665 0 2.968-.085 4.014-.087 1.056-.265 1.929-.667 2.718a6.9 6.9 0 0 1-3.015 3.016c-.79.402-1.663.58-2.72.666-1.045.086-2.348.086-4.013.086H9a.9.9 0 0 1 0-1.8h1.4c1.695 0 2.912-.002 3.867-.08.945-.077 1.554-.225 2.048-.477a5.1 5.1 0 0 0 2.229-2.229c.25-.493.4-1.102.476-2.047.078-.955.08-2.172.08-3.867V9a.9.9 0 0 1 .9-.9m-6-4A3.9 3.9 0 0 1 17.9 8v6a3.9 3.9 0 0 1-3.9 3.9H8A3.9 3.9 0 0 1 4.1 14V8A3.9 3.9 0 0 1 8 4.1zM8 5.9A2.1 2.1 0 0 0 5.9 8v6c0 1.16.94 2.1 2.1 2.1h6a2.1 2.1 0 0 0 2.1-2.1V8A2.1 2.1 0 0 0 14 5.9z"
                  fill={
                    {
                      "type": 2,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DetailsItem Snapshot type person 1`] = `
<View
  className="flex gap-0.5"
>
  <View
    className="max-w-72 min-w-32"
  >
    <Text
      className="px-1.5 text-f0-foreground-secondary"
    >
      Datos personales
    </Text>
    <View
      className="flex flex-shrink justify-center gap-0.5"
    >
      <View
        className="flex rounded font-medium text-f0-foreground *:flex-1"
      >
        <View
          accessibilityLabel="Copy Daniel Maza"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="group flex flex-row justify-between gap-1.5 rounded p-1.5 transition-colors duration-300 active:bg-f0-background-secondary-hover"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            className="flex flex-row items-center gap-1.5"
          >
            <View
              className="inline-flex "
            >
              <View
                className="h-fit w-fit"
              >
                <View
                  aria-hidden={true}
                  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-5 h-5 rounded-full bg-[hsl(theme(colors.flubber-50))]"
                  data-a11y-color-contrast-ignore={true}
                  role="img"
                >
                  <Text
                    className="text-f0-foreground-inverse/90 text-sm"
                    data-a11y-color-contrast-ignore={true}
                  >
                    D
                  </Text>
                </View>
              </View>
            </View>
            <Text
              className="line-clamp-5 text-left text-f0-foreground"
            >
              Daniel Maza
            </Text>
          </View>
          <View
            className="flex"
          >
            <RNSVGSvgView
              align="xMidYMid"
              aria-hidden={true}
              bbHeight="100%"
              bbWidth="100%"
              className="shrink-0 w-5 h-5 stroke-md text-f0-icon-bold col-start-1 col-end-2 row-start-1 row-end-2"
              fill="none"
              focusable={false}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M20 8.1a.9.9 0 0 1 .9.9v1.4c0 1.665 0 2.968-.085 4.014-.087 1.056-.265 1.929-.667 2.718a6.9 6.9 0 0 1-3.015 3.016c-.79.402-1.663.58-2.72.666-1.045.086-2.348.086-4.013.086H9a.9.9 0 0 1 0-1.8h1.4c1.695 0 2.912-.002 3.867-.08.945-.077 1.554-.225 2.048-.477a5.1 5.1 0 0 0 2.229-2.229c.25-.493.4-1.102.476-2.047.078-.955.08-2.172.08-3.867V9a.9.9 0 0 1 .9-.9m-6-4A3.9 3.9 0 0 1 17.9 8v6a3.9 3.9 0 0 1-3.9 3.9H8A3.9 3.9 0 0 1 4.1 14V8A3.9 3.9 0 0 1 8 4.1zM8 5.9A2.1 2.1 0 0 0 5.9 8v6c0 1.16.94 2.1 2.1 2.1h6a2.1 2.1 0 0 0 2.1-2.1V8A2.1 2.1 0 0 0 14 5.9z"
                  fill={
                    {
                      "type": 2,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DetailsItem Snapshot type team 1`] = `
<View
  className="flex gap-0.5"
>
  <View
    className="max-w-72 min-w-32"
  >
    <Text
      className="px-1.5 text-f0-foreground-secondary"
    >
      Team
    </Text>
    <View
      className="flex flex-shrink justify-center gap-0.5"
    >
      <View
        className="flex rounded font-medium text-f0-foreground *:flex-1"
      >
        <View
          accessibilityLabel="Copy factorial"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="group flex flex-row justify-between gap-1.5 rounded p-1.5 transition-colors duration-300 active:bg-f0-background-secondary-hover"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            className="flex flex-row items-center gap-1.5"
          >
            <View
              className="inline-flex "
            >
              <View
                className="h-fit w-fit"
              >
                <View
                  aria-hidden={true}
                  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-5 h-5 rounded-xs bg-[hsl(theme(colors.purple-50))]"
                  data-a11y-color-contrast-ignore={true}
                  role="img"
                >
                  <Text
                    className="text-f0-foreground-inverse/90 text-sm"
                    data-a11y-color-contrast-ignore={true}
                  >
                    F
                  </Text>
                </View>
              </View>
            </View>
            <Text
              className="line-clamp-5 text-left text-f0-foreground"
            >
              factorial
            </Text>
          </View>
          <View
            className="flex"
          >
            <RNSVGSvgView
              align="xMidYMid"
              aria-hidden={true}
              bbHeight="100%"
              bbWidth="100%"
              className="shrink-0 w-5 h-5 stroke-md text-f0-icon-bold col-start-1 col-end-2 row-start-1 row-end-2"
              fill="none"
              focusable={false}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M20 8.1a.9.9 0 0 1 .9.9v1.4c0 1.665 0 2.968-.085 4.014-.087 1.056-.265 1.929-.667 2.718a6.9 6.9 0 0 1-3.015 3.016c-.79.402-1.663.58-2.72.666-1.045.086-2.348.086-4.013.086H9a.9.9 0 0 1 0-1.8h1.4c1.695 0 2.912-.002 3.867-.08.945-.077 1.554-.225 2.048-.477a5.1 5.1 0 0 0 2.229-2.229c.25-.493.4-1.102.476-2.047.078-.955.08-2.172.08-3.867V9a.9.9 0 0 1 .9-.9m-6-4A3.9 3.9 0 0 1 17.9 8v6a3.9 3.9 0 0 1-3.9 3.9H8A3.9 3.9 0 0 1 4.1 14V8A3.9 3.9 0 0 1 8 4.1zM8 5.9A2.1 2.1 0 0 0 5.9 8v6c0 1.16.94 2.1 2.1 2.1h6a2.1 2.1 0 0 0 2.1-2.1V8A2.1 2.1 0 0 0 14 5.9z"
                  fill={
                    {
                      "type": 2,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
